# fileinfo

./: .actrc  .gitignore  Doxyfile.in  Makefile.am  PLATFORMS.md  README.md  autoclean.sh  autogen.sh  configure.ac  iconfigure  stat.c
.github/: README.md  actions-common.yaml  configure-android  default.src.yaml  docker-steps.src.yaml  docker.src.yaml  iconfigure  multiarch.src.yaml  shell.src.yaml  windows-shell.src.yaml
.github/actions/docker/: action.yaml
.github/workflows/: android.yaml  build-libstat.yaml  default.yaml  docker-multiarch.yaml  docker-official.yaml  docker-other.yaml  docker.yaml  github-actions-demo.yaml  github-actions-demo.yml  ios.yaml  mobile-android.yaml  mobile-ios.yaml  multiarch.yaml  qemu.yaml  shell.yaml  windows-shell.yaml  windows.yaml
.github/workflows-src/: android.yaml  default.yaml  docker-multiarch.yaml  docker-official.yaml  docker-other.yaml  docker.yaml  ios.yaml  mobile-android.yaml  mobile-ios.yaml  multiarch.yaml  shell.yaml  windows-shell.yaml  windows.yaml
src/: fileinfo.c  libstat.h  libstat.h.in  stat.c
src/fileinfo/: dynamic.h  dynamic.h.in  functions.h  static.h.in  types.h  types.h.in
tests/: fileinfo-cpp.cpp  fileinfo-fields-dynamic.c  fileinfo-fields-static.c  fileinfo-file-dynamic.c  fileinfo-file-static.c  include.cpp  print-fields-dynamic.c  print-fields-static.c  print-fields.c  print-file-dynamic.c  print-file-static.c  print-stat-dynamic.c  print-stat-static.c  print-stat.c
